# luisabel_serial_plotter

./: .editorconfig  .gitignore  .gitmodules  README.md  arduino_plotter_pyqt.py  howto_pyinstaller.txt  incoming_data.txt  labelled_animated_toggle.py  main.py  main_window.py  manifest.xml  my_graph.py  parsers.py  pyproject.toml  pyqt_custom_palettes.py  qbluetooth_test.py  range_dialog.py  requirements.txt  serial_speed_test.py  shortcuts.txt  shortcuts_widget.py
docu/: features_future.txt  packaging_notes.txt
docu/pyqt_examples/: pyqtgraph1.py
docu/readme_images/: .gitattributes
howto/: howto_nuitka.txt  howto_pyinstaller.txt  howto_pypi.txt
src/luisabel_serial_plotter/: .gitignore  .gitmodules  howto_nuitka.txt  howto_pyinstaller.txt  main.py  main_window.py  my_graph.py  parsers.py  qbluetooth_test.py  range_dialog.py  requirements.txt
