[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luisabel_serial_plotter"            # later on change simply to luisabel, or max luisabel_plotter
version = "0.1.5"
dependencies = [
  "pyserial",
  "PySide6",
  "numpy",
  "pyqtgraph",
  "qtwidgets",
  "future",
]
authors = [
    {name = "Raul Quesada Navarro", email = "raquenaengineering@gmail.com"},
]
description = "A package for socket/serial data plotting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/raquenaengineering/luisabel_serial_plotter"

[project.scripts]
luisabel = "luisabel_serial_plotter.main:main"
#luisabel_serial_plotter = "luisabel_serial_plotter.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["luisabel_serial_plotter*"]

# here to include logos and pictures for distribution #
[tool.setuptools.package-data]
luisabel_serial_plotter = [
    "resources/**/*",
    "pyqt_common_resources/**/*",
    "docu/readme_images/**/*"
]